--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,11 +4,11 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #FFFFFF !default;
-$header-bg-color: #EE1C25 !default;
-$header-bg-color-secondary: #0B4EA2 !default;
+$header-bg-color: #CE1126 !default;
+$header-bg-color-secondary: #002B7F !default;
 
 // Text
-$section-headings-color: #020F1E !default;
+$section-headings-color: #000B20 !default;
 $body-text-color: #404c51 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
