--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,7 +3,7 @@ $large-breakpoint: 80em !default;
 $medium-breakpoint: 42em !default;
 
 // Headers
-$header-heading-color: #FFFFFF !default;
+$header-heading-color: #FCD116 !default;
 $header-bg-color: #CE1126 !default;
 $header-bg-color-secondary: #002B7F !default;
 
